# nyelvtech2-projekt-haha

./: .gitignore  README.md  claims_dev_pred.jsonl  pyproject.toml  sandbox.ipynb  set_manipulations.py  vectorizer.ipynb  vectorizer.py  vocab_creation.ipynb  vocab_creation.py
data/cross_validation/PaxHeader/: fold_1  fold_4
